is-postgres/is/kube/is-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: is-service
spec:
  type: LoadBalancer
  selector:
    app: is
  ports:
  - name: servlet-https
    port: 9443
    targetPort: 9443
    protocol: TCP
